...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="zIP-i2-iGI">
                                                    <rect key="frame" x="311" y="7" width="51" height="29.5"/>
                                                    <accessibility key="accessibilityConfiguration" label="BlackVersion"/>
                                                </switch>
                                            </subviews>
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IYE-EG-ZeU">
                                                    <rect key="frame" x="311" y="7" width="51" height="29.5"/>
                                                    <accessibility key="accessibilityConfiguration" label="BlurEffects"/>
                                                </switch>
                                            </subviews>
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tQU-bn-19S">
                                                    <rect key="frame" x="311" y="7" width="51" height="29.5"/>
                                                    <accessibility key="accessibilityConfiguration" label="BouncingEffects"/>
                                                </switch>
                                            </subviews>
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DHP-vc-zbb">
                                                    <rect key="frame" x="311" y="7" width="51" height="29.5"/>
                                                    <accessibility key="accessibilityConfiguration" label="MotionEffects"/>
                                                </switch>
                                            </subviews>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Push VC" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSiz
                                                    <rect key="frame" x="16" y="11.5" width="317" height="21"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
...
                        </sections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Objective-C Demo" id="I0k-is-Syx"/>
                    <connections>
                        <outlet property="blackSwitch" destination="zIP-i2-iGI" id="M7G-FS-hV9"/>
...
