...
- (IBAction)openMapActionController:(id)sender {
    RMActionControllerStyle style = RMActionControllerStyleWhite;
    if(self.blackSwitch.on) {
        style = RMActionControllerStyleBlack;
    }
    
    RMAction *selectAction = [RMAction actionWithTitle:@"Select" style:RMActionStyleDone andHandler:^(RMActionController *controller) {
        NSLog(@"Map action controller finished successfully");
    }];
    
    RMAction *cancelAction = [RMAction actionWithTitle:@"Cancel" style:RMActionStyleCancel andHandler:^(RMActionController *controller) {
        NSLog(@"Map action controller was canceled");
    }];
    
    RMMapActionController *mapActionController = [RMMapActionController actionControllerWithStyle:style];
    mapActionController.title = @"Test";
    mapActionController.message = @"This is a test message.\nPlease choose a location and press 'Select' or 'Cancel'.";
...
